--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,17 +2,13 @@
     <div class="section-head container-md wow animate__fadeInDown animate__animated">
         <h2>We are Waverity</h2>
         <div class="hr"></div>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nisl nullam nisl ullamcorper volutpat amet ac.
-            Volutpat, ultricies molestie ut pharetra id est feugiat hendrerit.
-        </p>
     </div>
 
     <!-- About Us -->
 
     <div class="container about-us animate__fadeInUp animate__animated">
         <div class="d-flex flex-column flex-sm-column flex-lg-row justify-content-center align-items-center">
-            <img src="../../assets/images/about-us.jpg" alt="" class="w-100 mb-2">
+            <img src="../../assets/images/about-us.jpg" alt="" class="w-100">
             <div>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ipsum, risus, magna scelerisque euismod
