--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,13 +1,11 @@
 <div id="footer">
   <footer class="container d-flex flex-lg-row flex-md-row flex-sm-column justify-content-between align-items-center">
-    <div id="logo"><a routerLink="/home"><img src="../../assets/images/logo2.svg" alt="" width="100px"></a></div>
-    <div id="footer-bar">
+    <div id="logo"><a routerLink="/home"><img src="../../assets/images/logo3.svg" alt="" width="100px"></a></div>
       <ul>
-        <li><a routerLink="/news">News</a></li>
-        <li><a routerLink="/about">About</a></li>
-        <li><a routerLink="/careers">Careers</a></li>
+        <li><a routerLink="/news" routerLinkActive="active">News</a></li>
+        <li><a routerLink="/about" routerLinkActive="active">About</a></li>
+        <li><a routerLink="/careers" routerLinkActive="active">Careers</a></li>
       </ul>
-    </div>
     <div id="contact-button"><button (click)="openScrollableContent(longContent)">Contact Us</button></div>
   </footer>
   <div class="container credits">
