--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,12 @@
 <section id="intro">
     <div class="intro container">
         <div class="wow animate__fadeInUp animate__animated" id="intro-caption">
-            <h1>We make <span>big</span> changes for <span>small</span> differences.</h1>
-            <button (click)="scrollToElement(technology)">Browse More</button>
+            <h1>Every <span>Detail</span> has an <span>impact</span></h1>
+            <button (click)="scrollToElement(slider)">Browse More</button>
         </div>
     </div>
 </section>
-<section id="slider">
+<section #slider id="slider">
     <div class="container section">
         <h1>SOLUTIONS</h1>
         <div class="hr"></div>
