--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -18,30 +18,31 @@ button {
     margin: 30px auto 0 auto;
     border-radius: 3px 15px;
     padding: 20px 55px;
-    background: rgba(38, 38, 38, 0.5) !important;
-    backdrop-filter: blur(3px) !important;
+    background: rgba(72, 72, 72, 0.7) !important;
+    backdrop-filter: blur(30px) !important;
     border: none;
     color: rgba(255, 255, 255, 0.8);
     outline: none;
     cursor: pointer;
 }
 
-button:hover {
-    color: var(--dark);
-    background: var(--white)!important;
-    transition-duration: 300ms;
-}
-
 .about-us {
-    background: rgba(38, 38, 38, 0.5) !important;
+    background: rgba(38, 38, 38, 0.7) !important;
     backdrop-filter: blur(3px) !important;
-    padding: 40px;
+    padding: 30px 20px;
     border-radius: 15px;
 }
 
+button:hover {
+    color: var(--dark);
+    background: var(--white) !important;
+    transition-duration: 300ms;
+}
+
+
 #contacts {
     text-align: center;
-    margin-top: 60px;
+    margin: 60px auto 30px auto;
 }
 
 h4 {
@@ -63,7 +64,7 @@ h6 {
 }
 
 @media screen and (max-width: 768px) {
-    p{
+    p {
         padding-left: 0;
         margin-top: 20px;
     }
