--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -21,9 +21,9 @@
   margin: 0 20px;
 }
 #intro-caption h1 {
-  font-size: 3.8em;
+  font-size: 4.2em;
   text-align: left;
-  font-weight: 300;
+  font-weight: 400;
   line-height: 100px;
   max-width: 600px;
   margin-bottom: 30px;
@@ -32,7 +32,7 @@
 
 #intro-caption h1 > span {
   color: var(--white);
-  font-weight: 500;
+  /* font-weight: 700; */
 }
 
 #intro-caption button {
