--- a/src/app/news-details/news-details.component.css
+++ b/src/app/news-details/news-details.component.css
@@ -37,3 +37,9 @@ p {
 * {
     animation-duration: 1.2s;
 }
+
+@media only screen and (max-width: 768px) {
+    img {
+        width: 300px;
+    }
+}
