--- a/src/app/oil/oil.component.css
+++ b/src/app/oil/oil.component.css
@@ -1,3 +1,7 @@
+.bg {
+    padding-top: 15px!important;
+}
+
 .product img {
     float: left;
     margin-right: 60px;
@@ -48,7 +52,14 @@ img-comparison-slider {
     border-bottom: 1px solid var(--white)!important;
 }
 
-.nav-link:hover, .nav-link.active {
+.nav-link:hover {
+    background: none!important;
+    color: var(--blue)!important;
+    border: none!important;
+    border-bottom: 1px solid var(--white)!important;
+}
+
+.nav-link.active {
     background: none!important;
     color: var(--blue)!important;
     border: none!important;
