--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -1,4 +1,4 @@
-<div class="bg">
+<div class="bg pt-3">
   <ngx-tabset customNavClass="nav-test-class" customTabsClass="container">
     <ngx-tab tabTitle="Oil and Gas" [bypassDOM]="true">
       <ng-template>
@@ -20,7 +20,7 @@
                         {{item.title}}
                       </h1>
                       <p data-animation="fadeInLeft" data-delay=".9s">
-                        {{item.info | slice:0:250}}
+                        {{item.info | slice:0:250}}...
                       </p>
                       <a routerLink="/oil/{{ item.id }}" data-animation="fadeInUp" data-delay="1.1s"
                         class="main-btn rounded-btn icon-right small-size">
@@ -34,6 +34,7 @@
           </div>
           <!-- Data -->
         </ngx-slick-carousel>
+        <button routerLink="/oil/1">Browse All</button>
       </ng-template>
     </ngx-tab>
     <ngx-tab tabTitle="Remote Sensing Systems" [bypassDOM]="true">
@@ -56,7 +57,7 @@
                         {{item.title}}
                       </h1>
                       <p data-animation="fadeInLeft" data-delay=".9s">
-                        {{item.info | slice:0:250}}
+                        {{item.info | slice:0:250}}...
                       </p>
                       <a routerLink="/rss/{{ item.id }}" data-animation="fadeInUp" data-delay="1.1s"
                         class="main-btn rounded-btn icon-right small-size">
@@ -70,6 +71,7 @@
           </div>
           <!-- Data -->
         </ngx-slick-carousel>
+        <button routerLink="/rss/1">Browse All</button>
       </ng-template>
     </ngx-tab>
     <ngx-tab tabTitle="Custom Solutions" [bypassDOM]="true">
@@ -92,7 +94,7 @@
                         {{item.title}}
                       </h1>
                       <p data-animation="fadeInLeft" data-delay=".9s">
-                        {{item.info | slice:0:250}}
+                        {{item.info | slice:0:250}}...
                       </p>
                       <a routerLink="/custom/{{ item.id }}" data-animation="fadeInUp" data-delay="1.1s"
                         class="main-btn rounded-btn icon-right small-size">
@@ -106,6 +108,7 @@
           </div>
           <!-- Data -->
         </ngx-slick-carousel>
+        <button routerLink="/custom/1">Browse All</button>
       </ng-template>
     </ngx-tab>
   </ngx-tabset>
