--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -40,7 +40,7 @@ h4 {
     font-size: 20px;
     font-weight: 400;
     letter-spacing: 1.5px;
-    padding-bottom: 35px;
+    padding-bottom: 20px;
 }
 
 h6 {
@@ -57,5 +57,13 @@ h6 {
     p {
         padding-left: 0;
         margin-top: 20px;
+    }
+
+    h4 {
+        padding-bottom: 20px;
+    }
+    
+    h6 {
+        padding-bottom: 35px;
     }
 }
