--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -148,5 +148,6 @@ iframe {
         backdrop-filter: blur(6px) !important;
         padding: 0;
         padding: 5px 0 !important;
+        width: 100vw;
     }
 }
