--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -35,6 +35,11 @@
   /* font-weight: 700; */
 }
 
+.main-btn:hover {
+  background: var(--blue) !important;
+  color: var(--white);
+}
+
 .news {
   margin-bottom: 30px;
 }
