--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,7 +10,7 @@
             <a class="nav-link" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" [ngClass]="{'active': oilLink.isActive || rssLink.isActive || customLink.isActive}">
               Solutions
             </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <ul class="dropdown-menu animate__fadeIn animate__animated" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" routerLink="/oil/1" [routerLinkActive]="['active']" #oilLink="routerLinkActive">Oil and Gas</a></li>
               <li><a class="dropdown-item" routerLink="/rss/1" [routerLinkActive]="['active']" #rssLink="routerLinkActive">Remote Sensing Systems</a></li>
               <li><a class="dropdown-item" routerLink="/custom/1" [routerLinkActive]="['active']" #customLink="routerLinkActive">Custom Solutions</a></li>
@@ -25,6 +25,9 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="/careers" [routerLinkActive]="['active']">Careers</a>
           </li>
+          <!-- <li class="nav-item">
+            <a class="nav-link" (click)="openScrollableContent(longContent)">Contact Us</a>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link" (click)="openScrollableContent(longContent)">Contact Us</a>
           </li>
