--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="intro container">
         <div class="wow animate__fadeInUp animate__animated" id="intro-caption">
             <h1>Every <span>Detail</span> has an <span>impact</span></h1>
-            <button class="button" (click)="scrollToElement(slider)">Browse More</button>
+            <button class="button main-btn" (click)="scrollToElement(slider)">Browse More</button>
         </div>
     </div>
 </section>
