--- a/src/styles.css
+++ b/src/styles.css
@@ -66,10 +66,6 @@ html>div[style] {
 	padding-bottom: 40px;
 }
 
-nav {
-	background: var(--dark) !important;
-	border-color: var(--blue) !important;
-}
 
 body {
 /* 	background: url(assets/images/bg-demo.png);
@@ -83,16 +79,13 @@ body {
 	margin: 0;
 	padding: 0;
 	overflow-x: hidden;
-	/* background-image: url("assets/images/bg_all.svg");
-	background-size: cover;
-	background-repeat: no-repeat; */
 }
 
 video {
 	object-fit: cover;
 	width: 100vw;
 	height: 100vh;
-	position: fixed;
+	position: fixed !important;
 	top: 0;
 	left: 0;
 	z-index: -9999;
