--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -6,8 +6,8 @@
 
     <!-- About Us -->
 
-    <div class="container about-us animate__fadeInUp animate__animated">
-        <div class="d-flex flex-column flex-sm-column flex-lg-row justify-content-center align-items-center">
+    <div class="container animate__fadeInUp animate__animated">
+        <div class="d-flex about-us m-1 flex-column flex-sm-column flex-lg-row justify-content-center align-items-center">
             <img src="../../assets/images/about-us.jpg" alt="" class="w-100">
             <div>
                 <p>
