--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,6 +1,6 @@
 img {
     max-width: 600px;
-    border-radius: 10px;
+    border-radius: 2px 10px;
 }
 
 .hr {
@@ -25,7 +25,7 @@ button {
 .about-us {
     background: rgba(38, 38, 38, 0.7) !important;
     backdrop-filter: blur(3px) !important;
-    padding: 30px 20px;
+    padding: 30px 35px;
     border-radius: 15px;
 }
 
@@ -57,6 +57,10 @@ h6 {
     p {
         padding-left: 0;
         margin-top: 20px;
+    }
+
+    .border-end {
+        border-right: none !important;
     }
 
     h4 {
