--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,25 +11,25 @@
               Solutions
             </a>
             <ul class="dropdown-menu animate__fadeIn animate__animated" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" routerLink="/oil/1" [routerLinkActive]="['active']" #oilLink="routerLinkActive">Oil and Gas</a></li>
-              <li><a class="dropdown-item" routerLink="/rss/1" [routerLinkActive]="['active']" #rssLink="routerLinkActive">Remote Sensing Systems</a></li>
-              <li><a class="dropdown-item" routerLink="/custom/1" [routerLinkActive]="['active']" #customLink="routerLinkActive">Custom Solutions</a></li>
+              <li><a class="dropdown-item" routerLink="/oil/1" [routerLinkActive]="['active']" #oilLink="routerLinkActive" (click)="toggleNavBar()" >Oil and Gas</a></li>
+              <li><a class="dropdown-item" routerLink="/rss/1" [routerLinkActive]="['active']" #rssLink="routerLinkActive" (click)="toggleNavBar()" >Remote Sensing Systems</a></li>
+              <li><a class="dropdown-item" routerLink="/custom/1" [routerLinkActive]="['active']" #customLink="routerLinkActive" (click)="toggleNavBar()" >Custom Solutions</a></li>
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/news" [routerLinkActive]="['active']">News</a>
+            <a class="nav-link" (click)="toggleNavBar()" routerLink="/news" [routerLinkActive]="['active']">News</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/about" [routerLinkActive]="['active']">About</a>
+            <a class="nav-link" (click)="toggleNavBar()" routerLink="/about" [routerLinkActive]="['active']">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/careers" [routerLinkActive]="['active']">Careers</a>
+            <a class="nav-link" (click)="toggleNavBar()" routerLink="/careers" [routerLinkActive]="['active']">Careers</a>
           </li>
           <!-- <li class="nav-item">
             <a class="nav-link" (click)="openScrollableContent(longContent)">Contact Us</a>
           </li> -->
           <li class="nav-item">
-            <a class="nav-link" (click)="openScrollableContent(longContent)">Contact Us</a>
+            <a class="nav-link" (click)="toggleNavBar()" (click)="openScrollableContent(longContent)">Contact Us</a>
           </li>
         </ul>
       </div>
