--- a/src/app/slider/slider.component.css
+++ b/src/app/slider/slider.component.css
@@ -5,6 +5,10 @@
     justify-content: space-between;
 }
 
+span.prev.slick-arrow>img:hover {
+    filter: brightness(0.4);
+}
+
 button {
     display: flex;
     margin: 30px auto 0 auto;
