--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -82,39 +82,6 @@ nav {
     color: var(--white) !important;
 }
 
-/* .nav-item::after, .nav-item.active {
-    content: "";
-    display: block;
-    width: 0px;
-    height: 3px;
-    background: var(--blue);
-    transition: 0.4s;
-}
-
-.nav-item:hover::after {
-    width: 100%;
-}
-
-.navbar-dark .navbar-nav .active > .nav-link,
-.navbar-dark .navbar-nav .nav-link.active,
-.navbar-dark .navbar-nav .nav-link.show,
-.navbar-dark .navbar-nav .show > .nav-link,
-.navbar-dark .navbar-nav .nav-link:focus,
-.navbar-dark .navbar-nav .nav-link:hover {
-    color: var(--blue)!important;
-}
-.nav-item {
-    margin: 0px 10px;
-}
-.nav-link {
-    padding: 10px 5px;
-    color: var(--white) !important;
-    transition: 0.2s;
-}
-
-.nav-link:hover, .nav-link.active {
-    color: var(--blue) !important;
-} */
 ::-webkit-scrollbar {
     width: 10px;
 }
@@ -149,5 +116,17 @@ iframe {
         padding: 0;
         padding: 5px 0 !important;
         width: 100vw;
+    }
+}
+
+@media (max-width: 991px) {
+    .desktop {
+        display: none !important;
+    }
+}
+
+@media (min-width: 991px) {
+    .mobile {
+        display: none !important;
     }
 }
