--- a/src/styles.css
+++ b/src/styles.css
@@ -70,7 +70,7 @@ html>div[style] {
 body {
 	background: url('assets/images/bg-demo.png');
 	background-size: auto 1000px;
-	background-position: top;
+	background-position: center;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	color: #fff;
