--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -7,29 +7,20 @@
     <!-- About Us -->
 
     <div class="container animate__fadeInUp animate__animated">
-        <div class="d-flex about-us m-1 flex-column flex-sm-column flex-lg-row justify-content-center align-items-center">
+        <div
+            class="d-flex about-us m-1 flex-column flex-sm-column flex-lg-row justify-content-center align-items-center">
             <img src="../../assets/images/about-us.jpg" alt="" class="w-100">
             <div>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ipsum, risus, magna scelerisque euismod
-                    integer
-                    lorem.
-                    Ultricies tempor lacus erat arcu nisl ut tempus faucibus. Non tortor tincidunt aenean sit felis
-                    fermentum
-                    dui nunc.
-                    Eget est sociis dignissim in est auctor dignissim. Malesuada molestie sit id dolor, sodales ultrices
-                    viverra
-                    at amet.
-                    Id nascetur ultricies nec pulvinar ac. Et nunc tellus auctor amet senectus id. Maecenas praesent
-                    orci
-                    quisque nisl,
-                    donec.Eget est sociis dignissim in est auctor dignissim. Malesuada molestie sit id dolor, sodales
-                    ultrices
-                    viverra at amet.
-                    Id nascetur ultricies nec pulvinar ac. Et nunc tellus auctor amet senectus id. Maecenas praesent
-                    orci
-                    quisque nisl,
-                    donec.
+                    The Waverity provides cutting-edge and comprehensive solutions for the energy sector and remote
+                    sensing systems industry to address their complex challenges by application of sophisticated
+                    mathematical and computational techniques including non-linear data processing, advanced Artificial
+                    Intelligence, Deep Learning, and statistical analysis.
+                    <br>
+                    <br>
+                    Our mission is a transformation of conventional methods into more robust and effective approaches to
+                    increase commercial value.
+
                 </p>
             </div>
         </div>
@@ -43,11 +34,11 @@
             </div>
             <div class="col-lg-4 col-sm-12 border-end border-2">
                 <h4>Phone</h4>
-                <h6>+994 50 460 74 60</h6>
+                <h6>+994 55 640 18 99</h6>
             </div>
             <div class="col-lg-4 col-sm-12">
                 <h4>Email</h4>
-                <h6>eilink@khazar.org</h6>
+                <h6>contact@waverity.ai</h6>
             </div>
         </div>
     </div>
