--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -68,8 +68,8 @@
     <div class="modal-header">
       <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
     </div>
-    <div class="modal-body">
-      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSesUmowTcYAyQBNPWbNlLCNyX-MfWmw1VtJnymrdMszLjdgxg/viewform?embedded=true" width="450" height="1050" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+    <div class="modal-body text-center">
+      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSesUmowTcYAyQBNPWbNlLCNyX-MfWmw1VtJnymrdMszLjdgxg/viewform?embedded=true" width="350" height="1050" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </div>
     <div class="modal-footer">
       <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
