--- a/src/app/rss/rss.component.html
+++ b/src/app/rss/rss.component.html
@@ -12,7 +12,14 @@
                 <a ngbNavLink>{{ data.title }}</a>
                 <ng-template ngbNavContent>
                     <div class="d-flex flex-lg-row flex-md-column flex-sm-column flex-column justify-content-center align-items-center">
-                        <img [src]="data.cover" alt="" class="animate__fadeInLeft animate__animated">
+                        <div *ngIf="data.id == 1" class="animate__fadeInLeft animate__animated">
+                            <img-comparison-slider hover="hover">
+                                <img slot="first" src="{{ data.cover3 }}" />
+                                <img slot="second" src="{{ data.cover2 }}" />
+                            </img-comparison-slider>
+                        </div>
+                        <img *ngIf="data.id > 1" [src]="data.cover" alt=""
+                                class="animate__fadeInLeft animate__animated">
                         <div class="product">
                             <h2 class="animate__fadeInUp animate__animated">{{ data.title }}</h2>
                             <p class="animate__fadeInUp animate__animated">{{ data.info }}</p>
