--- a/src/app/slider/slider.component.css
+++ b/src/app/slider/slider.component.css
@@ -129,6 +129,10 @@ a:hover {
     .main-btn {
         display: none;
     }
+    p {
+        font-size: 14px;
+        padding-left: 0;
+    }
 }
 
 @media screen and (max-width:480px){
