--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -45,14 +45,16 @@
 }
 .news > img {
   width: 100%;
+  max-height: 250px;
   border-radius: 3px 15px 0 0;
 }
 
 .news-description {
-  padding: 30px 35px 30px 35px;
+  padding: 30px 35px 0 35px;
   background: rgba(38, 38, 38, 0.7)!important;
   backdrop-filter: blur(3px)!important;
   width: 100%;
+  min-height: 375px;
   border-radius: 0 0 3px 15px;
 }
 
