--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,8 +12,8 @@
         <div class="hr"></div>
         <p class="tech_p">
             Our solutions cover a wide specter of industries and aim to increase the commercial value by introducing new
-            technological and innovative solutions and optimizing the existing workflows through the application of
-            cutting-edge AI algorithms.
+            technological and innovative solutions as well as optimizing the existing workflows through the application
+            of cutting-edge AI algorithms.
         </p>
         <div class="wow animate__fadeInUp animate__animated">
             <app-slider></app-slider>
@@ -33,7 +33,7 @@
                 <img src="{{ data.cover }}" alt="">
                 <div class="news-description">
                     <h3>{{ data.title }}</h3>
-                    <p>{{ data.info | slice:0:250 }}</p>
+                    <p>{{ data.info | slice:0:250 }}...</p>
                     <div class="d-flex flex-row justify-content-between align-items-center">
                         <h4>{{ data.date }}</h4>
                         <button class="button-small" routerLink="/news/{{ data.id }}" routerLinkActive="active">Read
