--- a/src/products.css
+++ b/src/products.css
@@ -15,9 +15,10 @@
 
 img-comparison-slider {
     --divider-width: 2px;
-    --divider-color: #c0c0c0;
+    --divider-color: var(--dark);
     --default-handle-opacity: 0.3;
     max-height: 500px;
+    max-width: 600px;
   }
 
 .product h2 {
@@ -79,8 +80,15 @@ img-comparison-slider {
     width: 50%;
     height: 100%;
     max-height: 500px;
+    max-width: 600px;
     margin: 0px 10px;
 }
+
+img {
+    max-width: 650px !important;
+    height: 450px !important;
+}
+
 
 .product {
     width: 50%;
@@ -102,10 +110,17 @@ img-comparison-slider {
     }
 
      img{
-        max-width: 300px;
+        width: 100% !important;
+        height: auto !important;
     }
 
     .product img {
         max-width: 300px !important;
     }
+
+    img-comparison-slider > img{
+        width: 100% !important;
+        height: auto !important;
+        
+      }
 }
