--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -12,7 +12,7 @@
             <img src="../../assets/images/about-us.jpg" alt="" class="w-100">
             <div>
                 <p>
-                    The Waverity provides cutting-edge and comprehensive solutions for the energy sector and remote
+                    The WAVERITY provides cutting-edge and comprehensive solutions for the energy sector and remote
                     sensing systems industry to address their complex challenges by application of sophisticated
                     mathematical and computational techniques including non-linear data processing, advanced Artificial
                     Intelligence, Deep Learning, and statistical analysis.
