--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -34,7 +34,7 @@
                 <div class="news-description">
                     <h3>{{ data.title }}</h3>
                     <p>{{ data.info | slice:0:250 }}...</p>
-                    <div class="d-flex flex-row justify-content-between align-items-center">
+                    <div class="d-flex flex-row justify-content-between align-items-center mb-4">
                         <h4>{{ data.date }}</h4>
                         <button class="button-small" routerLink="/news/{{ data.id }}" routerLinkActive="active">Read
                             More</button>
