--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -8,12 +8,12 @@
           <div ngxSlickItem class="single-banner" *ngFor="let item of oil">
             <div class="container-fluid container-1470">
               <div class="row align-items-center">
-                <div class="col-lg-5 animate__fadeInLeft animate__animated wow">
+                <div class="col-lg-6 animate__fadeInLeft animate__animated wow">
                   <div class="banner-img" data-animation="fadeInRight" data-delay="0.5s">
                     <img [src]="item.cover" [alt]="item.title">
                   </div>
                 </div>
-                <div class="col-lg-7 animate__fadeInRight animate__animated wow">
+                <div class="col-lg-6 animate__fadeInRight animate__animated wow">
                   <div class="banner-text">
                     <div class="banner-content">
                       <h1 data-animation="fadeInLeft" data-delay="0.6s" class="title">
@@ -45,12 +45,12 @@
           <div ngxSlickItem class="single-banner" *ngFor="let item of rss">
             <div class="container-fluid container-1470">
               <div class="row align-items-center">
-                <div class="col-lg-5 animate__fadeInLeft animate__animated wow">
+                <div class="col-lg-6 animate__fadeInLeft animate__animated wow">
                   <div class="banner-img" data-animation="fadeInRight" data-delay="0.5s">
-                    <img [src]="item.cover" [alt]="item.title" width="490px" height="427px">
+                    <img [src]="item.cover" [alt]="item.title">
                   </div>
                 </div>
-                <div class="col-lg-7 animate__fadeInRight animate__animated wow">
+                <div class="col-lg-6 animate__fadeInRight animate__animated wow">
                   <div class="banner-text">
                     <div class="banner-content">
                       <h1 data-animation="fadeInLeft" data-delay="0.6s" class="title">
@@ -82,12 +82,12 @@
           <div ngxSlickItem class="single-banner" *ngFor="let item of custom">
             <div class="container-fluid container-1470">
               <div class="row align-items-center">
-                <div class="col-lg-5 animate__fadeInLeft animate__animated wow">
+                <div class="col-lg-6 animate__fadeInLeft animate__animated wow">
                   <div class="banner-img" data-animation="fadeInRight" data-delay="0.5s">
-                    <img [src]="item.cover" [alt]="item.title" width="490px" height="427px">
+                    <img [src]="item.cover" [alt]="item.title">
                   </div>
                 </div>
-                <div class="col-lg-7 animate__fadeInRight animate__animated wow">
+                <div class="col-lg-6 animate__fadeInRight animate__animated wow">
                   <div class="banner-text">
                     <div class="banner-content">
                       <h1 data-animation="fadeInLeft" data-delay="0.6s" class="title">
