--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -8,8 +8,8 @@
           <div ngxSlickItem class="single-banner" *ngFor="let item of oil">
             <div class="container-fluid container-1470">
               <div class="row align-items-center">
-                <div class="col-lg-6 animate__fadeInLeft animate__animated wow">
-                  <div class="banner-img" data-animation="fadeInRight" data-delay="0.5s">
+                <div class="col-lg-6 d-flex justify-content-center animate__fadeInLeft animate__animated wow">
+                  <div class="banner-img text-center" data-animation="fadeInRight" data-delay="0.5s">
                     <img [src]="item.cover" [alt]="item.title">
                   </div>
                 </div>
