--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -28,6 +28,7 @@
   max-width: 600px;
   margin-bottom: 30px;
   text-transform: uppercase;
+  text-shadow: 0 0 15px var(--blue);
 }
 
 #intro-caption h1 > span {
@@ -57,7 +58,7 @@
   background: rgba(38, 38, 38, 0.7)!important;
   backdrop-filter: blur(3px)!important;
   width: 100%;
-  min-height: 375px;
+  min-height: 305px;
   border-radius: 0 0 3px 15px;
 }
 
