--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -30,9 +30,9 @@
         <div class="container row d-flex flex-md-row justify-content-between">
             <div class="news col-lg-4 col-md-6 col-sm-12 wow animate__fadeInUp animate__animated"
                 *ngFor="let data of news | paginate: {itemsPerPage: 3, currentPage: p};">
-                <img src="{{ data.cover }}" alt="">
+                <img src="{{ data.cover  }}" alt="">
                 <div class="news-description">
-                    <h3>{{ data.title }}</h3>
+                    <h3>{{ data.title | slice:0:62 }}...</h3>
                     <p>{{ data.info | slice:0:250 }}...</p>
                     <div class="d-flex flex-row justify-content-between align-items-center mb-4">
                         <h4>{{ data.date }}</h4>
