--- a/src/styles.css
+++ b/src/styles.css
@@ -124,6 +124,7 @@ section {
 	font-weight: 400;
 	letter-spacing: 0.2em;
 	padding-top: 100px;
+	text-shadow: 0 0 10px var(--blue);
 }
 
 .section>.hr {
@@ -185,6 +186,7 @@ section {
 	font-weight: 400;
 	font-size: 30px;
 	letter-spacing: 0.2em;
+	text-shadow: 0 2px 10px var(--blue);
 }
 
 .section-head>p {
