--- a/src/styles.css
+++ b/src/styles.css
@@ -68,7 +68,7 @@ html>div[style] {
 
 
 body {
-	background: url(assets/images/bg-demo.png);
+	background: url(assets/images/bg-demo.gif);
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
