--- a/src/app/news/news.component.css
+++ b/src/app/news/news.component.css
@@ -22,8 +22,11 @@
 }
 
 .news-card img {
+    width: 100%;
+    max-height: 250px;
     border-radius: 3px 15px 0 0;
 }
+
 
 .news-description {
     padding: 30px 25px 30px 25px;
