--- a/src/app/technology/technology.component.css
+++ b/src/app/technology/technology.component.css
@@ -1,3 +1,11 @@
+.desktop {
+    display: none;
+}
+
+.mobile {
+    display: block;
+}
+
 .section-full {
     padding: 15px;
 }
@@ -218,6 +226,16 @@
     .right-img h4 {
         font-size: 20px;
         margin-left: 0px;
+    }
+}
+
+@media (max-width: 992px) {
+    .desktop {
+        display: block;
+    }
+
+    .mobile {
+        display: none;
     }
 }
 
