--- a/src/app/technology/technology.component.html
+++ b/src/app/technology/technology.component.html
@@ -1,4 +1,4 @@
-<div class="container section" id="technology">
+<div class="container section mobile" id="technology">
     <h1>TECHNOLOGY</h1>
     <div class="hr"></div>
     <p class="tech_p">
@@ -60,6 +60,86 @@
             <div class="line-right line">
                 <div class="line-right-box">
                     <div class="line-content-box wow animate__fadeInRight animate__animated right-dev">
+                        <div class="right-img img4">
+                            <img src="../../assets/images/image processing.png" alt="statics image" height="70px">
+                            <h4 class="min-title text-uppercase text-primary m-t0 m-b15">SIGNAL & IMAGE<br>
+                                PROCESSING</h4>
+                        </div>
+                        <div class="paragraph-right para1">
+                            <p class="right-paragraph para4">Advanced processing algorithms enable extracting,
+                                analyzing and manipulating information embedded in complex signals and images. They
+                                allow the extraction of valuable insights via the enhancement of the true signals
+                                present in the original data.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+<div class="container section desktop" id="technology">
+    <h1>TECHNOLOGY</h1>
+    <div class="hr"></div>
+    <p class="tech_p">
+        Our products aim to empower business to tackle their complex problems via application of sophisticated
+        mathematical and
+        computational techniques including non-linear data processing, advance artificial intelligence and statistical
+        analysis.
+    </p>
+    <div class="section-full">
+        <div class="time-line ">
+            <div class="line-left  line">
+                <div class="line-left-box">
+                    <div class="line-content-box wow animate__fadeInLeft animate__animated left-div">
+                        <div class="left-img img1">
+                            <img src="../../assets/images/ai.png" alt="statics image" height="70px">
+                            <h4 class="min-title text-uppercase text-primary m-t0 m-b15">ARTIFICIAL<br>
+                                INTELLIGENCE</h4>
+                        </div>
+                        <div class="paragraph-left para">
+                            <p class="font-16">Cutting edge developments in the Artificial intelligence fields sit at
+                                the core of our applications developed to profoundly change the way businesses work with
+                                their own data.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="line-right  line">
+                <div class="line-right-box">
+                    <div class="line-content-box wow animate__fadeInLeft animate__animated right-dev">
+                        <div class="right-img img2">
+                            <img src="../../assets/images/big data.png" alt="statics image" height="70px">
+                            <h4 class="min-title text-uppercase text-primary m-t0 m-b15">BIG DATA</h4>
+                        </div>
+                        <div class="paragraph-right para1">
+                            <p class="font-16">The close integration of Big Data analytics into our
+                                products allows analysis of a large volume of data and fuels more effective decision
+                                making, modelling and prediction for improved business intelligence.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="line-left line">
+                <div class="line-left-box">
+                    <div class="line-content-box wow animate__fadeInLeft animate__animated left-div">
+                        <div class="left-img img3">
+                            <img src="../../assets/images/statistics.png" alt="statics image" height="70px">
+                            <h4 class="min-title text-uppercase text-primary m-t0 m-b15">STATISTICS</h4>
+                        </div>
+                        <div class="paragraph-left para">
+                            <p class="font-16 left-paragraph para3">Implementation of enhanced statistical methods
+                                inside our developments plays a crucial role during the data collection and analysis as
+                                well as an effective representation of results.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="line-right line">
+                <div class="line-right-box">
+                    <div class="line-content-box wow animate__fadeInLeft animate__animated right-dev">
                         <div class="right-img img4">
                             <img src="../../assets/images/image processing.png" alt="statics image" height="70px">
                             <h4 class="min-title text-uppercase text-primary m-t0 m-b15">SIGNAL & IMAGE<br>
