--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -9,7 +9,7 @@
     <div class="container animate__fadeInUp animate__animated">
         <div
             class="d-flex about-us m-1 flex-column flex-sm-column flex-lg-row justify-content-center align-items-center">
-            <img src="../../assets/images/about-us.gif" alt="" class="w-100">
+            <img src="assets/images/about-us.gif" alt="" class="w-100">
             <div>
                 <p>
                     The WAVERITY provides cutting-edge and comprehensive solutions for the energy sector and remote
@@ -20,7 +20,6 @@
                     <br>
                     Our mission is a transformation of conventional methods into more robust and effective approaches to
                     increase commercial value.
-
                 </p>
             </div>
         </div>
