--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div id="footer">
   <footer class="container d-flex flex-lg-row flex-md-row flex-sm-column justify-content-between align-items-center">
-    <div id="logo"><a routerLink="/home"><img src="../../assets/images/logo3.svg" alt="" width="100px"></a></div>
+    <div id="logo"><a routerLink="/home"><img src="assets/images/logo3.svg" alt="" width="100px"></a></div>
       <ul>
         <li><a routerLink="/news" routerLinkActive="active">News</a></li>
         <li><a routerLink="/about" routerLinkActive="active">About</a></li>
