--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark animate__fadeInDown animate__animated">
     <div class="container">
-      <a class="navbar-brand logo" routerLink="/home"><img src="../../assets/images/logo2.svg" alt="" width="100px"></a>
+      <a class="navbar-brand logo" routerLink="/home"><img src="assets/images/logo2.svg" alt="" width="100px"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -69,7 +69,7 @@
       <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
     </div>
     <div class="modal-body text-center">
-      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSesUmowTcYAyQBNPWbNlLCNyX-MfWmw1VtJnymrdMszLjdgxg/viewform?embedded=true" width="350" height="1050" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf9L1eOLVN0dXGawbtY-c_m98wdAYlTE70lUK4FdF0Dj9VoQQ/viewform?embedded=true" width="100%" height="1050" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </div>
     <div class="modal-footer">
       <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
