--- a/src/app/technology/technology.component.html
+++ b/src/app/technology/technology.component.html
@@ -13,7 +13,7 @@
                 <div class="line-left-box">
                     <div class="line-content-box wow animate__fadeInLeft animate__animated left-div">
                         <div class="left-img img1">
-                            <img src="../../assets/images/ai.png" alt="statics image" height="70px">
+                            <img src="assets/images/ai.png" alt="statics image" height="70px">
                             <h4 class="min-title text-uppercase text-primary m-t0 m-b15">ARTIFICIAL<br>
                                 INTELLIGENCE</h4>
                         </div>
@@ -29,7 +29,7 @@
                 <div class="line-right-box">
                     <div class="line-content-box wow animate__fadeInRight animate__animated right-dev">
                         <div class="right-img img2">
-                            <img src="../../assets/images/big data.png" alt="statics image" height="70px">
+                            <img src="assets/images/big data.png" alt="statics image" height="70px">
                             <h4 class="min-title text-uppercase text-primary m-t0 m-b15">BIG DATA</h4>
                         </div>
                         <div class="paragraph-right para1">
@@ -45,7 +45,7 @@
                 <div class="line-left-box">
                     <div class="line-content-box wow animate__fadeInLeft animate__animated left-div">
                         <div class="left-img img3">
-                            <img src="../../assets/images/statistics.png" alt="statics image" height="70px">
+                            <img src="assets/images/statistics.png" alt="statics image" height="70px">
                             <h4 class="min-title text-uppercase text-primary m-t0 m-b15">STATISTICS</h4>
                         </div>
                         <div class="paragraph-left para">
@@ -61,7 +61,7 @@
                 <div class="line-right-box">
                     <div class="line-content-box wow animate__fadeInRight animate__animated right-dev">
                         <div class="right-img img4">
-                            <img src="../../assets/images/image processing.png" alt="statics image" height="70px">
+                            <img src="assets/images/image processing.png" alt="statics image" height="70px">
                             <h4 class="min-title text-uppercase text-primary m-t0 m-b15">SIGNAL & IMAGE<br>
                                 PROCESSING</h4>
                         </div>
@@ -93,7 +93,7 @@
                 <div class="line-left-box">
                     <div class="line-content-box wow animate__fadeInLeft animate__animated left-div">
                         <div class="left-img img1">
-                            <img src="../../assets/images/ai.png" alt="statics image" height="70px">
+                            <img src="assets/images/ai.png" alt="statics image" height="70px">
                             <h4 class="min-title text-uppercase text-primary m-t0 m-b15">ARTIFICIAL<br>
                                 INTELLIGENCE</h4>
                         </div>
@@ -109,7 +109,7 @@
                 <div class="line-right-box">
                     <div class="line-content-box wow animate__fadeInLeft animate__animated right-dev">
                         <div class="right-img img2">
-                            <img src="../../assets/images/big data.png" alt="statics image" height="70px">
+                            <img src="assets/images/big data.png" alt="statics image" height="70px">
                             <h4 class="min-title text-uppercase text-primary m-t0 m-b15">BIG DATA</h4>
                         </div>
                         <div class="paragraph-right para1">
@@ -125,7 +125,7 @@
                 <div class="line-left-box">
                     <div class="line-content-box wow animate__fadeInLeft animate__animated left-div">
                         <div class="left-img img3">
-                            <img src="../../assets/images/statistics.png" alt="statics image" height="70px">
+                            <img src="assets/images/statistics.png" alt="statics image" height="70px">
                             <h4 class="min-title text-uppercase text-primary m-t0 m-b15">STATISTICS</h4>
                         </div>
                         <div class="paragraph-left para">
@@ -141,7 +141,7 @@
                 <div class="line-right-box">
                     <div class="line-content-box wow animate__fadeInLeft animate__animated right-dev">
                         <div class="right-img img4">
-                            <img src="../../assets/images/image processing.png" alt="statics image" height="70px">
+                            <img src="assets/images/image processing.png" alt="statics image" height="70px">
                             <h4 class="min-title text-uppercase text-primary m-t0 m-b15">SIGNAL & IMAGE<br>
                                 PROCESSING</h4>
                         </div>
