--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -62,7 +62,7 @@
     <div class="modal-header">
       <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
     </div>
-    <div class="modal-body text-center">
+    <div class="modal-body">
       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf9L1eOLVN0dXGawbtY-c_m98wdAYlTE70lUK4FdF0Dj9VoQQ/viewform?embedded=true" width="100%" height="95%" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </div>
     <div class="modal-footer">
