--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,7 +11,7 @@
         <h1>SOLUTIONS</h1>
         <div class="hr"></div>
         <p class="tech_p">
-            Our solutions cover a wide specter of industries and aim to increase the commercial value by introducing new
+            Our solutions cover a wide spectrum of industries and aim to increase the commercial value by introducing new
             technological and innovative solutions as well as optimizing the existing workflows through the application
             of cutting-edge AI algorithms.
         </p>
