--- a/src/app/oil/oil.component.html
+++ b/src/app/oil/oil.component.html
@@ -3,7 +3,7 @@
         <h2>Oil and Gas</h2>
         <div class="hr"></div>
         <p>
-            We have six products in our oil and gas portfolio that focus on addressing pressing technical challenges of
+            We have five products in our oil and gas portfolio that focus on addressing pressing technical challenges of
             the industry with a wide application of Deep Learning and Signal Processing algorithms combined with domain
             knowledge.
 
